# mini-hft

./: .gitignore  CMakeLists.txt  Makefile  engine_bin  engine_main
.github/workflows/: ci.yml
analytics/ml/: features.sql  labels.sql  labels_1tick_20ms.sql
api/: main.py  requirements.txt
api/tests/: test_main.py
bench/: match_bench.cpp  spsc_backpressure_bench.cpp  spsc_bench.cpp  tsan_soak.cpp
cmake/: Sanitizers.cmake
docs/: invariants.md
engine/: CMakeLists.txt  Dockerfile  event_bus.hpp  events.hpp  main.cpp  match_engine.hpp
engine/common/: cpu.hpp  metrics.hpp  timebase.hpp
engine/lob/: book.hpp  order.hpp  price_level.hpp  types.hpp
engine/spsc/: spsc_channel.hpp  spsc_ring.hpp
ops/: docker-compose.yml
ops/prom/: prometheus.yml
research/: cv.py  features.py
research/tests/: test_features.py
tests/: lob_props.cpp  spsc_soak_tsan.cpp  test_ioc_fok.cpp  test_match.cpp  test_no_ghost_orders.cpp  test_replace.cpp  test_spsc.cpp  test_stp.cpp  test_volume_property.cpp
web/: Dockerfile  package-lock.json  package.json  tailwind.config.js
web/pages/: _app.js  health.js
